--- a/src/app/factura/pages/ver-detalle/ver-detalle.component.html
+++ b/src/app/factura/pages/ver-detalle/ver-detalle.component.html
@@ -64,7 +64,14 @@
             </div>
           </div>
           <div class="card-footer">
-           <button class="btn btn-primary btn-sm" (click)="imprimir()">Imprimir</button>
+            <div class="row">
+              <div class="col-6 d-flex justify-content-center">
+                <button class="btn btn-primary btn-sm" (click)="imprimir()">Imprimir Tamaño Ticket</button>
+              </div>
+              <div class="col-6 d-flex justify-content-center">
+                <button class="btn btn-primary btn-sm" (click)="imprimir()">Imprimir Tamaño Carta</button>
+              </div>
+            </div>
           </div>
         </div>
       </section>
