--- a/src/app/factura/pages/ver-detalle/ver-detalle.component.html
+++ b/src/app/factura/pages/ver-detalle/ver-detalle.component.html
@@ -66,10 +66,10 @@
           <div class="card-footer">
             <div class="row">
               <div class="col-6 d-flex justify-content-center">
-                <button class="btn btn-primary btn-sm" (click)="imprimir()">Imprimir Tamaño Ticket</button>
+                <button class="btn btn-primary btn-sm" (click)="imprimir()">Imprimir en  Etiquetadora</button>
               </div>
               <div class="col-6 d-flex justify-content-center">
-                <button class="btn btn-primary btn-sm" (click)="imprimir()">Imprimir Tamaño Carta</button>
+                <button class="btn btn-primary btn-sm" (click)="imprimir2()">Imprimir en  Carta</button>
               </div>
             </div>
           </div>
